# adapterbill

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/granitelib-rag/: README.md  scan.sh
examples/minimal-adapter/: adapter_config.json
src/adapterbill/: __init__.py  cli.py
tests/: test_scan.py
