[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adapterbill"
version = "0.1.0"
description = "A bill of materials for LoRA and PEFT adapters"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Bar V. Haim"}]
keywords = ["lora", "peft", "sbom", "safetensors", "ai-security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = []

[project.scripts]
adapterbill = "adapterbill.cli:main"

[project.urls]
Repository = "https://github.com/barvhaim/adapterbill"

[tool.setuptools.packages.find]
where = ["src"]
